# llm-d-bench-mcp

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
llm_d_bench_mcp/: __init__.py  __main__.py  adapters.py  content.py  server.py
scripts/: install.sh
tests/: conftest.py  test_mcp_server.py
